# sysperf

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEPLOYMENT.md  LICENSE  NEXT_SESSION.md  README.md  STATUS.md  issue.md  issue1.md  issue2.md  issue4.md  issue5.md  issue6.md  issue7.md  issue8.md  issue9.md  test.txt
.hermes/skills/NEVER-SUBMIT-TO-NIK/: SKILL.md
archive/: answer4.md  answer5.md  answer6.md  issue1.md  issue3.md
config/: README.md  default.json
docs/: ARCHITECTURE.md
packaging/: README.md  sysperf.desktop
packaging/appimage/: build-appimage.sh
packaging/debian/: changelog  control  copyright  rules
scripts/: lock.sh  preflight.sh  start.ps1  start.sh  version.sh
src/: cli_output.cpp  cli_output.h  config.cpp  config.h  main.cpp  sysperf.qrc  version.h.in
src/collector/: cpu.cpp  cpu.h  diskstats.cpp  diskstats.h  gpu_fdinfo.cpp  gpu_fdinfo.h  gpu_nvml.cpp  gpu_nvml.h  meminfo.cpp  meminfo.h  netdev.cpp  netdev.h  proc_util.cpp  proc_util.h  self_metrics.cpp  self_metrics.h  worker.cpp  worker.h
src/model/: snapshot.h  snapshot_qt.h
src/ui/: corebars.cpp  corebars.h  format.cpp  format.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  minigraph.cpp  minigraph.h  panel.cpp  panel.h
tests/: CMakeLists.txt  test_budget_smoke.cpp  test_cpu.cpp  test_diskstats.cpp  test_fdinfo.cpp  test_meminfo.cpp  test_netdev.cpp  test_self.cpp  test_util.h
tests/fixtures/cpu_t1/proc/: cpuinfo
tests/fixtures/disk_t0/proc/: diskstats
tests/fixtures/disk_t1/proc/: diskstats
tests/fixtures/mem/proc/: meminfo
tests/fixtures/self_big/proc/self/: smaps_rollup  stat
tests/fixtures/self_small/proc/self/: smaps_rollup  stat
tests/fixtures/smoke_t0/proc/: cpuinfo  diskstats  meminfo  stat
tests/fixtures/smoke_t0/proc/net/: dev
tests/fixtures/smoke_t0/proc/self/: smaps_rollup
tests/fixtures/smoke_t1/proc/: diskstats  meminfo  stat
tests/fixtures/smoke_t1/proc/net/: dev
tests/fixtures/smoke_t1/proc/self/: smaps_rollup  stat
